--- a/index.html
+++ b/index.html
@@ -181,6 +181,11 @@ h1.floating-title {
       <div class="status undetected">undetected</div>
       <a href="https://os5.mycloud.com/action/share/7ae7b04a-9a0b-44e5-9a6a-ed69a3c8ecf8" class="download-btn">Download</a>
     </div>
+  <div class="mod-box">
+  <div class="mod-info"><strong>Rampage Trainer RD2</strong><br>Version: 1.0</div>
+  <div class="status undetected">Undetected</div>
+  <a href="https://example.com/download/nightvision" class="download-btn">Download</a>
+</div>
   </div>
   <div class="link-buttons">
     <a href="https://www.youtube.com/@gigarazorlp1911" class="link-btn youtube">🎬 YouTube</a>
