--- a/index.html
+++ b/index.html
@@ -186,7 +186,23 @@ h1.floating-title {
   <div class="status undetected">Undetected</div>
   <a href="https://os5.mycloud.com/action/share/58b14a56-ff49-4c11-8a31-eab3a417e71f" class="download-btn">Download</a>
 </div>
+<div class="mod-box">
+  <div class="mod-info">
+    <strong>GTAIV Trainer</strong><br>
+    Version: 1.0
   </div>
+  <div class="status undetected">Undetected</div>
+  <a href="https://os5.mycloud.com/action/share/b4304933-4440-46a7-84a2-f6c1b126ae95" class="download-btn">Download</a>
+</div>
+<div class="mod-box">
+  <div class="mod-info">
+    <strong>Grand Theft Auto The Definivie Trilogy  + RD1+2+GTAV small trainer v1</strong><br>
+    Version: 1.0
+  </div>
+  <div class="status undetected">Undetected</div>
+  <a href="https://os5.mycloud.com/action/share/ac02bbc6-e76c-4c1a-8ee7-480b3b800c70" class="download-btn">Download</a>
+</div>
+</div>
   <div class="link-buttons">
     <a href="https://www.youtube.com/@gigarazorlp1911" class="link-btn youtube">🎬 YouTube</a>
     <a href="https://discord.com/invite/UGqxpbrcux" class="link-btn discord">💬 Discord</a>
